[gd_scene load_steps=27 format=2]

[ext_resource path="res://Obstacles/Bird.gd" type="Script" id=1]
[ext_resource path="res://Obstacles/Generic/FishCatcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sound/dark_bloup.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/animations/splash.png" type="Texture" id=5]
[ext_resource path="res://Assets/animations/bird_simple.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "shadow",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "Splash",
"speed": 9.0
} ]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.1712
height = 18.5202

[node name="Bird" type="Node2D"]
script = ExtResource( 1 )

[node name="Shadow" type="AnimatedSprite" parent="."]
position = Vector2( -0.140312, -0.359762 )
scale = Vector2( 0.306935, 0.306935 )
frames = SubResource( 2 )
animation = "shadow"

[node name="Splash" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -3.83575, 0.282843 )
scale = Vector2( 0.850923, 0.850923 )
frames = SubResource( 36 )
animation = "Splash"

[node name="BirdSprite" type="AnimatedSprite" parent="."]
position = Vector2( 142.194, -1.75218 )
scale = Vector2( 2.08, 2.08 )
frames = SubResource( 4 )

[node name="TweenShadow" type="Tween" parent="."]

[node name="TweenBird" type="Tween" parent="."]

[node name="TweenBirdScale" type="Tween" parent="."]

[node name="FishCatcher" parent="." instance=ExtResource( 3 )]
fishing_time = 0.1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -2.00226, -0.33371 )
scale = Vector2( 0.160001, 0.160001 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.08681, -0.417137 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -13.0
pitch_scale = 0.9

[connection signal="tween_all_completed" from="TweenBird" to="." method="_on_TweenBird_tween_all_completed"]
[connection signal="fished" from="FishCatcher" to="." method="_on_FishCatcher_fished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
